--- a/Bean n Stink Daytime.html
+++ b/Bean n Stink Daytime.html
@@ -31,7 +31,7 @@ text-align: center;
   
 button {   
         background-color: #b3dca0;   
-        color: white;   
+        color: black;   
         padding: 15px;   
         margin: 10px 0px;   
         border: none;   
