--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@ background-color:white;
     <br>
     <center>
 	<inline>
-    <button type="button" class="getstarted" onclick="location.href = '/cicconemrk/BnS_Day.html';"> Daytime Date</button>
-	<button type="button" class="getstarted" onclick="location.href = '/cicconemrk/BnS_Night_IN.html';"> Nighttime Date<br>(Staying In)</button>
-	<button type="button" class="getstarted" onclick="location.href = '/cicconemrk/BnS_Night_OUT.html';"> Nighttime Date<br>(Going Out)</button>
+    <button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Day.html';"> Daytime Date</button>
+	<button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Night_IN.html';"> Nighttime Date<br>(Staying In)</button>
+	<button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Night_OUT.html';"> Nighttime Date<br>(Going Out)</button>
 	</inline>
     </center>
 	<h1> Welcome to the hub for all things Bean & Stink! </h1>
