--- a/BnS_Day.html
+++ b/BnS_Day.html
@@ -109,7 +109,15 @@ background-color:white;
 	<h4>And OF COURSE they are all covered by me! :)</h4>
 	<h4>Spin the wheel and reference below to find out what date you've won!</h4>
 	<center>
-	<button type="button" class="getstarted" onclick="location.href = 'https://wheelofnames.com/8xq-wfp';">SPIN DA WHEEL</button>
+	<button type="button" class="getstarted" onclick="NewTab()">SPIN DA WHEEL</button>
+	
+	<script>
+		function NewTab() {
+			window.open(
+			"https://wheelofnames.com/8xq-wfp", "_blank");
+		}
+	</script>
+		
 	</center>
 	
 	<br>
