--- a/BnS_Night_IN.html
+++ b/BnS_Night_IN.html
@@ -109,7 +109,14 @@ background-color:white;
 	<h4>And OF COURSE they are all covered by me! :)</h4>
 	<h4>Spin the wheel and reference below to find out what date you've won!</h4>
 	<center>
-	<button type="button" class="getstarted" onclick="location.href = 'https://wheelofnames.com/7cp-tyz';">SPIN DA WHEEL</button>
+	<button type="button" class="getstarted" onclick="NewTab()">SPIN DA WHEEL</button>
+		
+	<script>
+		function NewTab(){
+			window.open(
+			"https://wheelofnames.com/7cp-tyz", "_blank");
+		}
+	</script>
 	</center>
 	
 	<br>
