--- a/BnS_Night_IN.html
+++ b/BnS_Night_IN.html
@@ -89,11 +89,11 @@ background-color:white;
 <div id="topPage">
   <br>
   <inline>
-  <a href="http://beanandstink.com">
+  <a href="/BeanAndStink/index.html">
          <img class="padded" alt="Bean And Stink main logo" src="https://imgur.com/wZtsrKZ.png"
          width="184" height="113">
   </a>
-  <a href="http://beanandstink.com">
+  <a href="/BeanAndStink/index.html">
          <img class="padded" alt="Bean And Stink text" src="https://imgur.com/idiZ0xb.png"
          width="350" height="113">
   </a>
