--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ background-color:white;
 </style>
 
 <title>Welcome to Bean And Stink!</title>
+	
+<link rel="https://imgur.com/wZtsrKZ.png">
+	
 </head>
 
 <body>
