--- a/BnS_Day.html
+++ b/BnS_Day.html
@@ -83,6 +83,9 @@ background-color:white;
 </style>
 
 <title>Daytime Dates!</title>
+	
+<link rel="https://imgur.com/wZtsrKZ.png">
+	
 </head>
 
 <body>
