--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ background-color:white;
 
 <title>Welcome to Bean And Stink!</title>
 	
-<link rel="https://imgur.com/wZtsrKZ.png">
+<link rel="icon" href="https://imgur.com/wZtsrKZ.png">
 	
 </head>
 
