--- a/BnS_Night_OUT.html
+++ b/BnS_Night_OUT.html
@@ -84,7 +84,7 @@ background-color:white;
 
 <title>Nighttime Dates (OUT)</title>
 	
-<link rel="https://imgur.com/wZtsrKZ.png">
+<link rel="icon" href="https://imgur.com/wZtsrKZ.png">
 	
 </head>
 
