--- a/BnS_Day.html
+++ b/BnS_Day.html
@@ -84,7 +84,7 @@ background-color:white;
 
 <title>Daytime Dates!</title>
 	
-<link rel="https://imgur.com/wZtsrKZ.png">
+<link rel="icon" href="https://imgur.com/wZtsrKZ.png">
 	
 </head>
 
