--- a/index.html
+++ b/index.html
@@ -53,22 +53,20 @@ customIndent{
   margin-left: 5em;
 }
 	
-#topPage {
-border 3px solid;
-left:0;
+header {
+left: 0;
 padding: 0 4%;
 position: relative;
-width: 100%;
+width: auto;
 background:#c9a0dc;
 }
 
-#botPage {
+footer {
 padding: 0 4%;
 position: relative;
-border 3px solid;
 left:0;
 padding: 0 4%;
-width: 100%;
+width: auto;
 background:#c9a0dc;
 }
 
@@ -89,7 +87,7 @@ background-color:white;
 </head>
 
 <body>
-<div id="topPage">
+<header>
   <br>
   <inline>
   <a href="/BeanAndStink/">
@@ -102,7 +100,7 @@ background-color:white;
   </a>
   </inline>
  
-</div>
+</header>
 
 <div id="mainDiv">
     <center>
@@ -131,7 +129,7 @@ background-color:white;
  <br>
 </div>
 
-<div id="botPage">
+<footer>
 <br>
 <inline>
   <h2>An OrcPiss.com Production</h2>
@@ -139,7 +137,7 @@ background-color:white;
   <button type="button" class="footbutton" align="left" onclick="location.href = 'https://twitter.com/CanIDrinkUrPee';"> Contact Us</button> 
   </inline>
 <br>
-</div>
+</footer>
 
 </body>
 </html>
