--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@ background:#c9a0dc;
 }
 
 #mainDiv{
-margin: 10px;
+width: auto;
+margin-top: 10px;
+margin-bottom: 10px;
 padding: 0 4%;
-position: center;
+position: relative;
 border: 5px outset;
 background-color:white;
 }
