--- a/BnS_Night_OUT.html
+++ b/BnS_Night_OUT.html
@@ -53,29 +53,29 @@ customIndent{
   margin-left: 5em;
 }
 	
-#topPage {
-border 3px solid;
-left:0;
+header {
+left: 0;
 padding: 0 4%;
 position: relative;
-width: 100%;
+width: auto;
 background:#c9a0dc;
 }
 
-#botPage {
+footer {
 padding: 0 4%;
 position: relative;
-border 3px solid;
 left:0;
 padding: 0 4%;
-width: 100%;
+width: auto;
 background:#c9a0dc;
 }
 
 #mainDiv{
-margin: 10px;
+width: auto;
+margin-top: 10px;
+margin-bottom: 10px;
 padding: 0 4%;
-position: center;
+position: relative;
 border: 5px outset;
 background-color:white;
 }
@@ -89,7 +89,7 @@ background-color:white;
 </head>
 
 <body>
-<div id="topPage">
+<header>
   <br>
   <inline>
   <a href="/BeanAndStink/">
@@ -102,7 +102,7 @@ background-color:white;
   </a>
   </inline>
  
-</div>
+</header>
 
 <div id="mainDiv">
     <h1> Nighttime Date Ideas for Staying In! </h1>
@@ -151,7 +151,7 @@ background-color:white;
  <br>
 </div>
 
-<div id="botPage">
+<footer>
 <br>
 <inline>
   <h2>An OrcPiss.com Production</h2>
@@ -159,7 +159,7 @@ background-color:white;
   <button type="button" class="footbutton" align="left" onclick="location.href = 'https://twitter.com/CanIDrinkUrPee';"> Contact Us</button> 
   </inline>
 <br>
-</div>
+</footer>
 
 </body>
 </html>
