--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ background-color:white;
 <header>
   <br>
   <inline>
-  <a href="index">
+  <a href="/.">
          <img class="padded" alt="Bean And Stink main logo" src="https://imgur.com/wZtsrKZ.png"
          width="184" height="113">
   </a>
-  <a href="index">
+  <a href="/.">
          <img class="padded" alt="Bean And Stink text" src="https://imgur.com/idiZ0xb.png"
          width="350" height="113">
   </a>
