--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ background-color:white;
     <br>
     <center>
 	<inline>
-    <button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Day.html';"> Daytime Date</button>
+    <button type="button" class="getstarted" onclick="location.href = '/dates-day';"> Daytime Date</button>
 	<button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Night_IN.html';"> Nighttime Date<br>(Staying In)</button>
 	<button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Night_OUT.html';"> Nighttime Date<br>(Going Out)</button>
 	</inline>
