--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ background-color:white;
     <center>
 	<inline>
     <button type="button" class="getstarted" onclick="location.href = '/dates-day';"> Daytime Date</button>
-	<button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Night_IN.html';"> Nighttime Date<br>(Staying In)</button>
-	<button type="button" class="getstarted" onclick="location.href = '/BeanAndStink/BnS_Night_OUT.html';"> Nighttime Date<br>(Going Out)</button>
+	<button type="button" class="getstarted" onclick="location.href = '/dates-night-in';"> Nighttime Date<br>(Staying In)</button>
+	<button type="button" class="getstarted" onclick="location.href = '/dates-night-out';"> Nighttime Date<br>(Going Out)</button>
 	</inline>
     </center>
 	<h1> Welcome to the hub for all things Bean & Stink! </h1>
