--- a/long-distance.html
+++ b/long-distance.html
@@ -114,7 +114,7 @@ background-color:white;
 </header>
 
 <div id="mainDiv">
-	<h1><u>Bean & Stink's Fun n' Games From Afar!</u></h1> <br> <br>
+	<h1><u>Bean & Stink's Fun n' Games From Afar!</u></h1> <br>
 
 	<h4>LONG DISTANCE DATE IDEAS BABY!</h4>
 	<h4>A list of fun activies aggregated from across the internet and my own brain!</h4>
