miata sim update
-created the miata-sim page
-updated index to include a link to miata-sim
-made the testing graveyard for excess docs that are no longer in use

--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@ button {
   .ldr {
     width: 150px;
     height: 100px;
+    font-size: 30px;
+  }
+  .miata {
+    width: 175px;
+    height: 100px;
+    font-size: 20px;
   }
 
-a.letsrock {
-  font-size: 30;
-}
+
 customIndent{
   margin-left: 5em;
 }
@@ -146,12 +150,27 @@ background-color:white;
     <inline>
       <img alt="really cool flames trust me" src="https://imgur.com/lfZ93FD.gif"
            width="100" height="100" style="vertical-align:middle;margin:0px 50px">
-      <button type="button" class="ldr" onclick="location.href = '/long-distance';"> <a class="letsrock"><b>LET'S ROCK</b></a></button>
+      <button type="button" class="ldr" onclick="location.href = '/long-distance';"> <b>LET'S ROCK</b></button>
       <img alt="really cool flames trust me" src="https://imgur.com/lfZ93FD.gif"
            width="100" height="100" style="vertical-align:middle;margin:0px 50px">
     </inline>
   </center>
   <br><br><br>
+  <h1>---------------------------------------------------------------------------------------------------------------------------------------</h1>
+  <h1><b><u>INTRODUCING THE MIATA SIMULATOR 3000</b></u></h1>
+  <center>
+  <img alt="really cool flames trust me" src="https://imgur.com/fqRzneI.gif"
+       width="480" height="270">
+
+  <h2>Since I don't have a Miata for you to be on headlight duty, using Unreal Engine 5 I made a simulation 100% <u>IDENTICAL</u> to being On Duty in a real life Miata!</h2>
+  <h2>This simulation should give you the <u>EXACT FEELING</u> of pressing the headlight button when sitting copilot</h2>
+  <h2>So now you can imagine we are at a stoplight with another Miata and you are in charge of giving them a headlight flash!!</h2>
+  <h4><u>WARNING</u>:  THIS SIMULATION IS SO LIFELIKE IT CAN BE CONFUSED FOR REAL LIFE. REMEMBER IT IS ONLY A SIMULATION. DO NOT USE FOR EXTENDED PERIODS OF TIME</h4>
+  <button type="button" class="miata" onclick="location.href = '/miata-sim';"> <b>ENTER THE <br> MIATA-VERSE</b></button>
+  </center>
+
+  <br><br><br>
+  <h1>---------------------------------------------------------------------------------------------------------------------------------------</h1>
   <h1> Welcome to the hub for all things Bean & Stink! </h1>
 
   <h4>Just select which of the occasions you'd like to plan for, and away you go!</h4>
