changed text in dates-night-out
for some reason the text at the top copied dates-night-in exactly, so I just changed it to reflect a night out instead

--- a/dates-night-out.html
+++ b/dates-night-out.html
@@ -24,35 +24,35 @@ h4{
 text-align: center;
 }
 
-.padded img { 
-    padding-left: 10em; 
-    padding-right: 10em; 
-  } 
-  
-button {   
-        background-color: #b3dca0;   
-        color: black;   
-        padding: 15px;   
-        margin: 10px 0px;   
-        border: none;   
-        cursor: pointer;   
+.padded img {
+    padding-left: 10em;
+    padding-right: 10em;
+  }
+
+button {
+        background-color: #b3dca0;
+        color: black;
+        padding: 15px;
+        margin: 10px 0px;
+        border: none;
+        cursor: pointer;
          }
-    
+
 	.getstarted {
-	    width: auto;   
-        padding: 10px 18px;  
+	    width: auto;
+        padding: 10px 18px;
         margin: 10px 150px;
 		height: 50px;
 	}
 	.footbutton {
-	    width: auto;   
-        padding: 10px 18px;  
+	    width: auto;
+        padding: 10px 18px;
         margin: 10px 5px;
 	}
 customIndent{
   margin-left: 5em;
 }
-	
+
 header {
 left: 0;
 padding: 0 4%;
@@ -83,9 +83,9 @@ background-color:white;
 </style>
 
 <title>Nighttime Dates (OUT)</title>
-	
+
 <link rel="icon" href="https://imgur.com/wZtsrKZ.png">
-	
+
 </head>
 
 <body>
@@ -101,19 +101,19 @@ background-color:white;
          width="350" height="113">
   </a>
   </inline>
- 
+
 </header>
 
 <div id="mainDiv">
-    <h1> Nighttime Date Ideas for Staying In! </h1>
+    <h1> Nighttime Date Ideas for Going Out! </h1>
 
-	<h4>Ideas for an outing we can do together at home!</h4>
-	<h4>Designed for weekends where we wanna have us time before heading to bed</h4>
+	<h4>Ideas for an evening out on the town!</h4>
+	<h4>Designed for weekends where we wanna have fun outside of the house</h4>
 	<h4>And OF COURSE they are all covered by me! :)</h4>
 	<h4>Spin the wheel and reference below to find out what date you've won!</h4>
 	<center>
 	<button type="button" class="getstarted" onclick="NewTab()">SPIN DA WHEEL</button>
-	
+
 	<script>
 		function NewTab() {
 			window.open(
@@ -121,10 +121,10 @@ background-color:white;
 		}
 	</script>
 	</center>
-	
+
 	<br>
 	<br>
-	
+
 	<h2>All Fired Up!</h2>
 	<p>Make some lil guys we can take home!</p>
 	<p>Maybe make piggy banks that we can use to save up :)</p>
@@ -147,7 +147,7 @@ background-color:white;
 	<h2>Play Pool @ Union</h2>
 	<p>Billiards with the Bean!</p>
  <br>
-	
+
  <br>
 </div>
 
@@ -156,7 +156,7 @@ background-color:white;
 <inline>
   <h2>An OrcPiss.com Production</h2>
   <button type="button" class="footbutton" align="left" onclick="location.href = 'https://twitter.com/CanIDrinkUrPee';"> FAQ</button>
-  <button type="button" class="footbutton" align="left" onclick="location.href = 'https://twitter.com/CanIDrinkUrPee';"> Contact Us</button> 
+  <button type="button" class="footbutton" align="left" onclick="location.href = 'https://twitter.com/CanIDrinkUrPee';"> Contact Us</button>
   </inline>
 <br>
 </footer>
