--- a/miata-sim.html
+++ b/miata-sim.html
@@ -82,7 +82,7 @@ background-color:white;
 
 </style>
 
-<title>Daytime Dates!</title>
+<title>Miata Simulator 3000!</title>
 
 <link rel="icon" href="https://imgur.com/wZtsrKZ.png">
 
